[package]
name = "tonic-examples"
version = "0.1.0"
authors = ["LiQingMuBai <cywhoyi@gmail.com>"]
edition = "2018"
publish = false
license = "MIT"


[[bin]]
name = "cbptp-server"
path = "src/cbptp/server.rs"

[[bin]]
name = "cbptp-client"
path = "src/cbptp/client.rs"



[dependencies]
tonic = { path = "../tonic", features = ["tls"] }
prost = "0.6"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"] }
async-stream = "0.2"
tower = "0.3"
# Required for routeguide
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.2.0-alpha", features = ["tracing-log"] }
tracing-attributes = "0.1"
tracing-futures = "0.2"
# Required for wellknown types
prost-types = "0.6"

[build-dependencies]
tonic-build = { path = "../tonic-build" }
